<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.bushu.mineoppskrifter.HeleOppskrift">

    <item
        android:id="@+id/kalender_item"
        android:orderInCategory="100"
        android:icon="@drawable/calendar"
        android:title="@string/kalender_menu_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete_item"
        android:orderInCategory="100"
        android:icon="@drawable/delete"
        android:title="@string/slett_menu_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/rediger_item"
        android:orderInCategory="100"
        android:icon="@drawable/edit_icon"
        android:title="@string/rediger_menu_item"
        app:showAsAction="always" />
</menu>